--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
   <title>Movies Explorer</title>
 </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+<body class="page">
   <div id="root"></div>
 </body>
 
